--- a/SatisfiabilityChecker/SatisfiabilityChecker.csproj
+++ b/SatisfiabilityChecker/SatisfiabilityChecker.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="z3x64win" Version="4.5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
