--- a/Z3/packages.config
+++ b/Z3/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Solver.Foundation" version="3.1.0" targetFramework="net461" />
   <package id="z3x64win" version="4.5.0.1" targetFramework="net461" />
 </packages>
