--- a/SatisfiabilityTests/SatisfiabilityTests.csproj
+++ b/SatisfiabilityTests/SatisfiabilityTests.csproj
@@ -57,6 +57,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SatisfiabilityCheckerLibrary\SatisfiabilityCheckerLibrary.csproj">
+      <Project>{90a08dbd-3335-435e-845b-82d132bf527d}</Project>
+      <Name>SatisfiabilityCheckerLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
